Исправляет ошибки согласно макета
1 Исправляет font-size на главной станице в заголовках
2 Исправляет цвет текста в футере
3 Исправляет шрифт в кнопках на стр. Портфолио
4 Исправляет структуру секций на стр. Портфолио в фильтре

--- a/portfolio.html
+++ b/portfolio.html
@@ -37,8 +37,6 @@
           <li><button class="project-filter-button" type="button">Дизайн</button></li>
           <li><button class="project-filter-button" type="button">Маркетинг</button></li>
         </ul>
-      </section>
-      <section class="projects">
         <ul class="list">
           <li>
             <a class="link" href="">
@@ -109,11 +107,16 @@
     <footer class="dark-bg">
       <a class="link logo" href="./"><span class="logo-part">Web</span>Studio</a>
       <address>
-        <a class="link" href="https://goo.gl/maps/jdCn2PC4iJVRVPya7" target="_blank" rel="noreferrer noopener">
+        <a
+          class="link footer-address"
+          href="https://goo.gl/maps/jdCn2PC4iJVRVPya7"
+          target="_blank"
+          rel="noreferrer noopener"
+        >
           г. Киев, пр-т Леси Украинки, 26
         </a>
-        <a class="link" href="mailto:info@example.com">info@example.com</a>
-        <a class="link" href="tel:+380991111111">+38 099 111 11 11</a>
+        <a class="link footer-mail" href="mailto:info@example.com">info@example.com</a>
+        <a class="link footer-tel" href="tel:+380991111111">+38 099 111 11 11</a>
       </address>
     </footer>
   </body>
