--- a/index.html
+++ b/index.html
@@ -74,22 +74,22 @@
         <ul class="list">
           <li class="team-item">
             <img src="./images/team/img-1.jpg" width="270" height="260" alt="Игорь Демьяненко" />
-            <h3 class="team-member">Игорь Демьяненко</h3>
+            <h3 class="team-member-title">Игорь Демьяненко</h3>
             <p class="team-member-position" lang="en">Product Designer</p>
           </li>
           <li class="team-item">
             <img src="./images/team/img-2.jpg" width="270" height="260" alt="Ольга Репина" />
-            <h3 class="team-member">Ольга Репина</h3>
+            <h3 class="team-member-title">Ольга Репина</h3>
             <p class="team-member-position" lang="en">Frontend Developer</p>
           </li>
           <li class="team-item">
             <img src="./images/team/img-1.jpg" width="270" height="260" alt="Николай Тарасов" />
-            <h3 class="team-member">Николай Тарасов</h3>
+            <h3 class="team-member-title">Николай Тарасов</h3>
             <p class="team-member-position" lang="en">Marketing</p>
           </li>
           <li class="team-item">
             <img src="./images/team/img-1.jpg" width="270" height="260" alt="Михаил Ермаков" />
-            <h3 class="team-member">Михаил Ермаков</h3>
+            <h3 class="team-member-title">Михаил Ермаков</h3>
             <p class="team-member-position" lang="en">UI Designer</p>
           </li>
         </ul>
@@ -98,11 +98,16 @@
     <footer class="dark-bg">
       <a class="link logo" href="./"><span class="logo-part">Web</span>Studio</a>
       <address>
-        <a class="link" href="https://goo.gl/maps/jdCn2PC4iJVRVPya7" target="_blank" rel="noreferrer noopener">
+        <a
+          class="link footer-address"
+          href="https://goo.gl/maps/jdCn2PC4iJVRVPya7"
+          target="_blank"
+          rel="noreferrer noopener"
+        >
           г. Киев, пр-т Леси Украинки, 26
         </a>
-        <a class="link" href="mailto:info@example.com">info@example.com</a>
-        <a class="link" href="tel:+380991111111">+38 099 111 11 11</a>
+        <a class="link footer-mail" href="mailto:info@example.com">info@example.com</a>
+        <a class="link footer-tel" href="tel:+380991111111">+38 099 111 11 11</a>
       </address>
     </footer>
   </body>
